kind-cluster/demo-superuser.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8ssandra-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: spark
