kind-cluster/ubuntu-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-dev
  labels:
    app: ubuntu-dev
spec:
  containers:
  - name: ubuntu-dev
    image: ubuntu:latest
    imagePullPolicy: IfNotPresent
    command: [ "sleep" ]
    args: [ "infinity" ]
