kind-cluster/spark-sql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-sql
  namespace: spark
spec:
  ports:
  - name: spark-thrift
    port: 10000
    protocol: TCP
    targetPort: 10000
  - name: spark-thrift-http
    port: 10001
    protocol: TCP
    targetPort: 10001
  - name: spark-history
    port: 18080
    protocol: TCP
    targetPort: 18080
  selector:
    app: spark-sql
  type: ClusterIP
